--- a/pom.xml
+++ b/pom.xml
@@ -221,7 +221,13 @@
   </scm>
 
   <prerequisites>
-    <maven>3.0.3</maven>
+    <maven>3.0.3</maven><distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>Artifactory-releases</name>
+        <url>http://3.110.87.89:8081/artifactory/libs-release-local</url>
+    </repository>
+</distributionManagement>
   </prerequisites>
 
 </project>
